--- a/game.html
+++ b/game.html
@@ -235,7 +235,7 @@
     </div>
     
     <button onclick="completeBakery()" class="bakery-continue-btn">
-      <span class="btn-text">continue to the beach</span>
+      <span class="btn-text">continue to the the cinema</span>
       <span class="btn-arrow">→</span>
     </button>
     
