--- a/character.html
+++ b/character.html
@@ -16,10 +16,7 @@
             <div class="character-subtitle">Max the Strong</div>
             <p class="character-description">
                 A strategic warrior reborn from the ashes of the Shattering, Max optimises synergies across all stakeholder initiatives. 
-                Formerly a noble of Lucan, now a Tarnished seeking to mend the Elden Ring and maximise shareholder value. 
-                His morning routine includes reviewing daily Excel plans, hitting the gym to maintain peak physical condition, 
-                and strategising quarterly roadmaps to align cross-functional team efforts. Known for his aggressive 
-                project planning and relentless pursuit of MVP deliverables.
+                Formerly a noble of Lucan, now a Tarnished seeking to mend the Elden Ring and maximise shareholder value.
              </p>
         </div>
 
@@ -34,14 +31,14 @@
         <!-- Card & Stats Section -->
         <div class="card-stats-section">
             <div class="card-stats-container">
-                <!-- FIFA Card Image (Left Side) -->
+                <!-- FIFA Card Image -->
                 <div class="fifa-card-image">
                     <img src="assets/fifa-card.png" 
                          alt="Max FIFA Card" 
                          class="card-image">
                 </div>
 
-                <!-- Prometheus-style Gauge Stats (Right Side) -->
+                <!-- Gauge Stats -->
                 <div class="prometheus-stats">
                     <div class="stats-header">
                         <div class="player-bio">
@@ -136,8 +133,9 @@
                             <h4>PLAYSTYLES</h4>
                             <div class="playstyle-tags">
                                 <span class="playstyle-tag">Power Shot</span>
-                                <span class="playstyle-tag">Aerial Threat</span>
+                                <span class="playstyle-tag">Strong</span>
                                 <span class="playstyle-tag">Relentless</span>
+                                <span class="playstyle-tag">Shareholder Value</span>
                             </div>
                         </div>
                         <div class="roles">
